# pappl

./: .gitattributes  .gitignore  .gitmodules  .packit.yml  .travis.yml  BUILD.md  CHANGES.md  CONTRIBUTING.md  EMBEDDED.md  INSTALL.md  Makedefs.in  Makefile  NOTICE  README.md  SECURITY.md  config.h.in  configure  configure.ac  escl-ops.c  makesrcdist  pappl.spec  pappl2.spec
.github/: codeql.yml
.github/workflows/: build.yml  codeql-analysis.yml  coverity.yml
doc/: IPP-EXTENSIONS.md  Makefile  pappl-body.md  pappl.epub  pappl.html
man/: Makefile  pappl-client-body.man  pappl-client.3  pappl-device-body.man  pappl-device.3  pappl-exec.1  pappl-footer.man  pappl-job-body.man  pappl-job.3  pappl-log-body.man  pappl-log.3  pappl-mainloop-body.man  pappl-mainloop.3  pappl-makeresheader.1  pappl-printer-body.man  pappl-printer.3  pappl-resource-body.man  pappl-resource.3  pappl-system-body.man  pappl-system.3  pappl.1
pappl/: Dependencies  Info.plist  Makefile  auth.c  base-private.h  base.h  base.strings  body.md  client-accessors.c  client-auth.c  client-escl.c  client-ipp.c  client-loc.c  client-private.h  client-webif.c  client.c  client.h  contact.c  cppcheck.suppressions  device-file.c  device-network.c  device-private.h  device-usb.c  device.c  device.h  device.md  dither-private.h  dnssd-private.h  dnssd.c  driver.h  escl-ops.c  escl-ops.h  esclops.c  hello-world.md  httpmon-private.h  httpmon.c  introduction.md  ipp.c  ipp.strings  job-accessors.c  (+103 more)
pappl/DummyDriver/: ScannerBufferInfo.xml  ScannerCapabilities.txt  ScannerCapabilities.xml  ScannerStatus.xml
pappl/DummyDriverFiles/: ScannerStatus.txt
pappl/strings/: base.strings  de.strings  de_strings.h  en.strings  en_strings.h  es.strings  es_strings.h  fr.strings  fr_strings.h  he.strings  he_strings.h  ipp.strings  it.strings  it_strings.h  ja.strings  ja_strings.h  nb-NO.strings  nb-NO_strings.h  pl.strings  pl_strings.h  ta.strings  ta_strings.h  tr.strings  tr_strings.h  zh-Hans.strings  zh-Hans_strings.h
server/: device.c  job.c  log.c  server.h
testepx/: epx-dev-plan.md  epx-driver.c  pwg5100.11.test  testepx.c  testepx.h
testsuite/: Dependencies  Makefile  get-wifi.test  hp-printer-app.c  hp-printer-app.service  label-png.h  pwg-driver.c  pwg-driver.h  set-wifi.test  test.h  testhttpmon.c  testmain.c  testmainloop.c  testpage-color.odg  testpappl.c  testpappl.h  testqrcode.c
testsuite/snap/: snapcraft.yaml
vcnet/: config.h  copy-dlls.bat  dns_sd.c  libpappl1.vcxproj  libpappl1.vcxproj.filters  libpappl1_native.nuspec  libpappl1_native.props  libpappl1_native.redist.nuspec  libpappl2.vcxproj  libpappl2.vcxproj.filters  libpappl2_native.nuspec  libpappl2_native.props  libpappl2_native.redist.nuspec  packages.config  pappl.sln  testpappl.vcxproj
xcode/: Info.plist  config.h
xcode/pappl.xcodeproj/: project.pbxproj
xcode/pappl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/pappl.xcworkspace/: contents.xcworkspacedata
